Update 12.05.2024 / professions more

--- a/src/css/pro.css
+++ b/src/css/pro.css
@@ -55,7 +55,7 @@
 .p-dropdown-items-wrapper li{
     border: 1px solid #656865;
     margin-bottom: 10px;
-    padding: 5px;
+    padding: 5px 5px 5px 20px;
 }
 
 
