Update 01.09.2024 / orders first part

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,11 +10,21 @@
 
 /*Change input field color*/
 /*:valid*/
-.form-control {
-    background-color: #1f3d40 !important;
-    caret-color: white;
-    color: white;
-}
+
+
+
+
+/*.form-control {*/
+/*    background-color: #1f3d40 !important;*/
+/*    */
+/*    caret-color: white;*/
+/*    color: white;*/
+/*}*/
+
+
+
+
+
 /*input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active { -webkit-box-shadow: 0 0 0 30px #1F3D40FF inset !important; }*/
 /*input:-webkit-autofill { -webkit-text-fill-color: white !important; }*/
 
