Update 26.01.2025 / Starting modify style

--- a/src/css/notification.css
+++ b/src/css/notification.css
@@ -2,9 +2,9 @@
     width: 80%;
     margin: auto;
     color: white;
-    background: #3ca73c;
+    background: #7bc47b;
     font-size: 20px;
-    border: solid #0e920e;
+    /*border: solid #0e920e;*/
     border-radius: 5px;
     padding: 10px;
     /*margin-bottom: 10px auto;*/
@@ -17,9 +17,9 @@
     /*width: 90%;*/
     /*margin: auto;*/
     color: white;
-    background: #f5839c;
+    background: #e4acb7;
     font-size: 20px;
-    border: solid #a47272;
+    /*border: solid #a47272;*/
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
