--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,51 +1,84 @@
-/*.ok-select {*/
-/*    border-color: black;*/
-/*    color: black;*/
-/*}*/
+.login {
+    background-color: #2e2b2b;
+    border-radius: 1%;
+    opacity: 0.9;
+    padding: 7px;
+}
+.register {
+    background-color: #2e2b2b;
+    opacity: 0.9;
+    padding: 7px;
+}
+.forgot {
+    margin-top: 100px;
+    background-color: #2e2b2b;
+    border-radius: 1%;
+    opacity: 0.9;
+    padding: 7px;
+}
+/*Nav avatar dropdown*/
+.profile-info {
+    background-color: #2e2b2b;
+    text-align: left;
+    border-radius: 10%;
+    opacity: 1;
+    margin: 0 3px 13px 0;
+    padding: 13px;
+}
+.edit-profile-avatar h3{
+    border: 1px solid #ddd;
+}
+.profile-main {
+    background-color: #2e2b2b;
 
-/*.error-select {*/
-/*    border-color: red;*/
-/*    color: red;*/
-/*}*/
+    opacity: 0.9;
+    padding: 3px;
+}
+.edit-profile table {
+    color: #ddd;
+}
 
-/*Change input field color*/
-/*:valid*/
+.client-form {
+    background-color: #2e2b2b;
+    opacity: 0.9;
+    padding: 7px;
+}
+.pro-form {
+    background-color: #2e2b2b;
+    opacity: 0.9;
+    margin-top: 30px;
+    padding: 7px;
+}
+.pro-panel-header {
+    text-align: center;
+    background-color: #2e2b2b;
+    border-radius: 50%;
+    opacity: 0.9;
+    padding: 30px;
+}
+.pro-panel-header .header-content {
 
+}
+.pro-panel {
+    background-color: #2e2b2b;
+    opacity: 0.9;
+    padding: 7px;
+}
+.pro-panel-feedback {
+    background-color: #2e2b2b;
+    opacity: 0.9;
+    border: 1px solid #999;
+    padding: 10px;
 
-
-
-/*.form-control {*/
-/*    background-color: #1f3d40 !important;*/
-/*    */
-/*    caret-color: white;*/
-/*    color: white;*/
-/*}*/
-
-
-
-
-
-/*input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:focus, input:-webkit-autofill:active { -webkit-box-shadow: 0 0 0 30px #1F3D40FF inset !important; }*/
-/*input:-webkit-autofill { -webkit-text-fill-color: white !important; }*/
-
-/*Change autocomplete styles in WebKit*/
-/*input:-webkit-autofill,*/
-/*input:-webkit-autofill:hover,*/
-/*input:-webkit-autofill:focus,*/
-/*input:-webkit-autofill:active,*/
-/*textarea:-webkit-autofill,*/
-/*textarea:-webkit-autofill:hover,*/
-/*textarea:-webkit-autofill:focus,*/
-/*select:-webkit-autofill,*/
-/*select:-webkit-autofill:hover,*/
-/*select:-webkit-autofill:focus {*/
-/*    border: 1px solid #434346;*/
-/*    -webkit-text-fill-color: #F1F1F1;*/
-/*    -webkit-box-shadow: 0 0 0 1000px #1B1B1C inset;*/
-/*    transition: background-color 5000s ease-in-out 0s;*/
-/*}*/
-
-/*input:-webkit-autofill {*/
-/*    caret-color: white;*/
-/*}*/
+}
+.edit-profession {
+    background-color: #2e2b2b;
+    opacity: 0.9;
+    padding: 7px;
+}
+.edit-price {
+    background-color: #2e2b2b;
+    opacity: 0.9;
+    padding: 7px;
+}
 
