--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,10 +2,11 @@
     /*height: 100vh;*/
     position:fixed;
     top:100px;
-    bottom:30px;
+    bottom:40px;
     left:0;
     right:0;
     overflow-y: scroll;
+    overflow-x: hidden;
 
     background-image: url('../assets/247.png');
 }
