--- a/src/css/notification.css
+++ b/src/css/notification.css
@@ -13,6 +13,16 @@
     width: 50px;
     margin-left: 20px;
 }
+.warning {
+    color: white;
+    width: 80%;
+    background: #eda971;
+    font-size: 20px;
+    /*border: solid #a47272;*/
+    border-radius: 5px;
+    padding: 10px;
+    margin: auto;
+}
 .error {
     /*width: 90%;*/
     /*margin: auto;*/
