--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,11 +2,11 @@
     /*height: 100vh;*/
     position:fixed;
     top:100px;
-    bottom:50px;
+    bottom:0;
     left:0;
     right:0;
     overflow-y: scroll;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
     background: linear-gradient(#4c4747, #121215);
     /*background-image: url('../assets/247.png');*/
 }
@@ -50,6 +50,16 @@
     color: #ddd;
 }
 
+
+.calendar-info {
+    background-color: #2e2b2b;
+
+    height: 500px;
+    overflow-y: scroll;
+
+    padding: 13px;
+}
+
 .client-form {
     background-color: #2e2b2b;
     opacity: 0.9;
@@ -71,6 +81,7 @@
 .pro-panel-header .header-content {
 
 }
+
 .pro-panel {
     background-color: #2e2b2b;
     opacity: 0.9;
@@ -118,6 +129,14 @@
     border-radius: 1%;
     opacity: 1;
     padding: 17px;
+}
+.client-final-header {
+    margin: 30px auto;
+    width: 300px;
+    color: cadetblue;
+    padding: 17px;
+    background-color: #2e2b2b;
+    border-radius: 50%;
 }
 .client-final {
     background-color: #2e2b2b;
