--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,14 +51,14 @@
 }
 
 
-.calendar-info {
-    background-color: #2e2b2b;
+/*.calendar-info {*/
+/*    background-color: #2e2b2b;*/
 
-    height: 500px;
-    overflow-y: scroll;
+/*    height: 500px;*/
+/*    overflow-y: scroll;*/
 
-    padding: 13px;
-}
+/*    padding: 13px;*/
+/*}*/
 
 .client-form {
     background-color: #2e2b2b;
