--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,13 @@
 html, body {
-    min-width: 100vw;
-    min-height: 100vh;
+
+    /*min-width: 100vw;*/
+    /*min-height: 100vh;*/
 }
+/*body {*/
+/*    min-height: 100vh;*/
+/*    width: 100vw;*/
+/*    overflow-x: hidden;*/
+/*}*/
 .bg {
     /*height: 100vh;*/
     position:fixed;
